implemented changes to suit accessibility

--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main>
-    <div class="qr-card">
-      <div class="qr-img">
-        <img src="./images/image-qr-code.png" alt="A QR Code Image">
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Improve your front-end <br > skills by building projects</h3>
-        <p class="card-text">
-          Scan this QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level
-        </p>
-      </div>
+  <main class="qr-card">
+    <div class="qr-img">
+      <img src="./images/image-qr-code.png" alt="QR Code Image">
+    </div>
+    <div class="card-body">
+      <h1 class="card-title">Improve your front-end skills by building projects</h1>
+      <p class="card-text">
+        Scan this QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
     </div>
   </main>
 </body>
